@@ -105,11 +105,9 @@ NOTE: sorry, this is very raw :)
 
 + beaming choose a maximal number of notes per beam (e.g. 4 1/8 in 4/4 measures) but if you put like 5 or 6 of them in a row,
   it doesn't always do wise choices regarding wich ones should be beamed (i.e. it doesn't consider beats)
-+ test score editor in non-4/4 measures
 + loading a key from a file probably won't appear in keyboard editor
 + accidentals should last entire measure
 + score editor - sharp of flat notes at time=0 have their sign hidden behind grey bar
-+ 1/8 notes shouldn't be beamed by groups of tree in 3/4 measures
 - in a chord that lasts 2 4/4 measures, each note of the chord has its own tie
 
 + rearrange notes doesn't always undo correctly
@@ -118,7 +116,6 @@ NOTE: sorry, this is very raw :)
 - render a bit less often to be easier on processor
 + stop rendering when red playback line is no more visible
 
-- drum editor... cannot start selection below drums (when only used ones are shown)
 - sometimes pasting in guitar editor gives wrong notes
 - clicking on a note should play it and it doesn't always work (like when note is selected)
 - at the very top, in keyboard editor, wrong notes are greyed out
