@@ -12,6 +12,7 @@
 - improved handling of ties with whole notes
 - Improved beamed notes grouping in non-4/4 time signatures
 - Hopefully fixed volume picker not closing when pressing escape on all platforms
+- Improved drum editor behaviour when few drums are shown
 
  1.1b5
 - note beams
